fixing of index size on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -161,6 +161,7 @@ text-decoration: none;
 color: #fff;
 font-family: "Montserrat", sans-serif;
 }
+
 .top-footer li a:hover {
     color:#00adb5; ;
     border-bottom:2px solid #00adb5; ;
@@ -201,7 +202,7 @@ font-family: "Montserrat", sans-serif;
     border-radius: 40%;
     padding:10px;
     margin-top: 150px;
-    margin-left: 5%;
+    margin-left: 7%;
    
 
 }
@@ -236,7 +237,7 @@ font-family: "Montserrat", sans-serif;
     align-items: center;
     margin: 0;
     font-size: 15px;
-    height: 200px;
+    height: 300px;
 }
 
 .right-content h1 {
@@ -253,7 +254,7 @@ font-family: "Montserrat", sans-serif;
     align-items: center;
     margin: 0;
     font-size: 15px;
-    height: 200px;
+    height: 300px;
 }
 
 
@@ -275,14 +276,14 @@ font-family: "Montserrat", sans-serif;
 
 hr {
     
-    width: 100%;
+    width: 90%;
     height: 10px;
     background-color: #00adb5;
     
 }
 
 .meetup-vid {
-    margin: 10px 0 100px 5px;
+    margin: 10px 0 10px 5px;
     
 }
 
@@ -553,6 +554,10 @@ hr {
        
         
     }
+
+    .left-content h1 {
+       text-align: left;
+    }
     
     .right-content {
         float: left;
@@ -563,9 +568,13 @@ hr {
      
     }
 
+    .right-content h1 {
+        text-align: left;
+    }
+
 
     .left-content p  {
-       height: 80px;
+       height: 50px;
         
     }
 
@@ -576,7 +585,7 @@ hr {
     
     .right-content p {
 
-        height: 80px;
+        height: 50px;
     
      
     }
@@ -731,12 +740,10 @@ hr {
         font-size: 13px;
     }
 
-    .logo img {
-        margin: 0;
-    }
+
 
     .left-content p  {
-        height: 140px;
+        height: 80px;
          
      }
 
@@ -749,7 +756,7 @@ hr {
      .main-img img {
          width: 300px;
          height: 200px;
-         margin-left: 8%;
+         margin-left: 5%;
      }
 
      .mid-content {
@@ -773,7 +780,7 @@ hr {
         width: 200px;
         height: 60px;
         float: left;
-        margin-left: 40%;
+        margin-left: 5%;
         margin-bottom: 10px;
     }
 
@@ -789,12 +796,10 @@ hr {
         font-weight: 700;
         font-size: 20px;
         padding-bottom: 10px;
-        text-align: center;
         margin-top: 35px;
     }
 
     .right-content p {
-        align-items: center;
         margin: 0;
         font-size: 10px;
         
@@ -805,23 +810,22 @@ hr {
         font-weight: 700;
         font-size: 20px;
         padding-bottom: 10px;
-        text-align: center;
         margin-top: 35px;
     }
 
     .left-content p {
-        align-items: center;
         margin: 0;
         font-size: 10px;
         
     }
 
+ 
+
    
 
     #video h2 {
         float: left;
-        margin-right: 70px;
-        width: 100%;
+        width: 70%;
         font-size: 25px;
         margin-top: 10px;
         border-bottom: 1px solid #00adb5;
